--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>Football Squared</h1>
+    <h1>Football Squared Unlimited</h1>
     <div id="game-container">
         <div id="grid-container">
             <div class="logo-row">
